v 1.2 Add some func

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -69,3 +69,8 @@ choose_your_p=Please choose your procedure
 today_schedule=Schedule for today
 conduct=Conduct
 all_procedures=All procedures
+sign_in_please=Please sign in or create an account
+sign_in=Sign in
+create_acc=Create an Account
+as_guest=As a guest
+invalid_login=invalid username or password
