--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 <servlet>
-    <servlet-name>PlainOldServlet</servlet-name>
+    <servlet-name>MainServlet</servlet-name>
     <servlet-class>com.artuhin.project.controller.MainServlet</servlet-class>
 </servlet>
 
     <servlet-mapping>
-        <servlet-name>PlainOldServlet</servlet-name>
+        <servlet-name>MainServlet</servlet-name>
         <url-pattern>/main</url-pattern>
     </servlet-mapping>
 
