--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -27,7 +27,7 @@ nail_staining=Nail staining
 GUEST=Guest
 CLIENT=Client
 MASTER=Master
-ADMINISTRATOR=Administrator
+ADMIN=Administrator
 admin_users=Users
 admin_role_changer=Role changer
 admin_login=Login
@@ -35,7 +35,8 @@ admin_change=Change role
 admin_change_spec=Change specialization
 procedure_uniqid=UniqID
 procedure_procedure=Procedure
-procedure_date=Date
+procedure_date=Start date
+procedure_enddate=End date
 procedure_set_time=Set another time
 procedure_duration=Duration(hours)
 procedure_confirmed=Confirmed
@@ -74,3 +75,18 @@ sign_in=Sign in
 create_acc=Create an Account
 as_guest=As a guest
 invalid_login=invalid username or password
+current_long_no=sorry, current login is already taken
+sorry_update_role=sorry, when update role something went wrong
+sorry_update_spec=sorry, when update skills something went wrong
+status=Status
+DECLARED=Declared
+CONFIRMED=Confirmed
+FINISHED=Finished
+PAID=Paid
+RATED=Rated
+our_masters=Our procedures & masters
+masters_menu=Masters
+role=Role
+recall_count=Recall count
+specialization=Skills
+empty=Empty
